@@ -20,6 +20,7 @@ Mantis
  * Added button to copy categories from another project, in addition to the current 'copy to'.
  * Added new localization strings.
  * Added support for allowing managers to update project information, change project user list, add/edit/delete categories and versions.
+ * Added a remove link next to the edit link in the project categories and project versions to all deleting without going into edit.
  * Quoted various text values retrieved from a database and used in a database query.
  * Updated Hungarian localization.
  * Updated Russian localizations.
